--- a/src/components/side-menu/SideMenu.css
+++ b/src/components/side-menu/SideMenu.css
@@ -2,7 +2,6 @@
   width: 200px;
   height: 100vh;
   background-color: #f5f5f5;
-  padding: 20px;
   position: fixed;
   left: 0;
   top: 0;
@@ -20,7 +19,7 @@
 .collapse-btn {
   position: absolute;
   right: 10px;
-  top: 10px;
+  top: 5px;
   background: #34495e;
   border: none;
   color: white;
@@ -45,6 +44,15 @@
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
+}
+
+.nav-links {
+  padding-left: 5px;
+  margin-top: 40px;
+}
+
+.side-menu.collapsed .nav-links {
+  padding-left: 0px;
 }
 
 .nav-link {
